--- a/content/projects/architect/index.mdx
+++ b/content/projects/architect/index.mdx
@@ -4,7 +4,7 @@ description: "A distributed web application for managing and orchestrating compl
 technologies: ["React", "TypeScript", "MongoDB", "FastAPI", "Celery", "Redis", "Docker", "Python"]
 date: "Summer 2024"
 event: "Architect Therapeutics - Production System"
-coverImage: "/projects/architect/systems_design.png"
+coverImage: "/projects/architect/torrey_pines.jpg"
 team: ["Taj Gillin"]
 ---
 
@@ -48,7 +48,7 @@ What researchers truly needed was a unified platform that could handle the entir
 The platform implements a distributed microservices architecture designed for scalability, reliability, and maintainability. Each component serves a specific purpose while maintaining loose coupling through well-defined APIs, creating a system that can grow with the research team's needs.
 
 <ProjectImage 
-  src="/projects/architect/systems_design.png"
+  src="/projects/architect/torrey_pines.jpg"
   alt="Complete system architecture diagram showing all components and their interactions"
   caption="Full-stack architecture implementing microservices design with distributed task processing"
   zoom
